upload to bintray artifact repository

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,11 @@
   <groupId>com.sourcegraph</groupId>
   <artifactId>simple</artifactId>
   <version>1.0</version>
+  <distributionManagement>
+    <repository>
+      <id>bintray-sourcegraph-simple</id>
+      <name>sourcegraph-simple</name>
+      <url>https://api.bintray.com/maven/sourcegraph/simple/simple/;publish=1</url>
+    </repository>
+  </distributionManagement>
 </project>
